crates/cctui-tui/src/snapshots/cctui__view_snapshots__conversation_expanded_blocks.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 306
expression: render_screen(&mut app)
---
 infra (main) on orion ── opus ── $1.25
 Read  crates/cctui-tui/src/main.rs  read                                                          ▕
└ 984 lines                                                                                        ▕
 Bash  cargo test  write                                                                           ▕
└ ✗ exit 101 · 3 failed                                                                            ▕
      parser::wraps                                                                                ▕
      parser::nests                                                                                ▕
                                                                                                   ▐
● Assistant                                                                                        ▐
Looking at the views first.                                                                        ▐
                                                                                                   ▐
- one                                                                                              ▐
- two                                                                                              ▐
⏱ 12.4k in / 1.1k out                                                                              ▐
⏱ 38s                                                                                              ▐
                                                                                                   ▐
◆ lane-b                                                                                           ▐
the parser lane is rebased                                                                         ▐
⟳ context reset (/clear)                                                                           ▐
                                                                                                   ▐
◁ Reply done                                                                                       ▐
────────────────────────────────────────────────────────────────────────────────────────────────────
 ◆ waiting for input
❯  Type a message...
