crates/cctui-tui/src/snapshots/cctui__view_snapshots__conversation_image_lines.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 1241
expression: render_screen(&mut app)
---
 infra (main) on orion ── opus ── $1.25  ! 1 need input — Ctrl+g


❯ You
look at [image: shot.png]


[image: diagram.png] · g i opens it













────────────────────────────────────────────────────────────────────────────────────────────────────
 ◆ waiting for input
❯  Type a message...
