crates/cctui-tui/src/snapshots/cctui__view_snapshots__conversation_narrow.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 460
expression: "render_screen_sized(&mut app, 60, 20)"
---
 infra (main) on orion ── opus ── $1.25
 Bash  cargo test  write                                   ▕
└ ✗ exit 101 · 3 failed  (2 more · o)                      ▕
                                                           ▕
● Assistant                                                ▕
Looking at the views first.                                ▕
                                                           ▕
- one                                                      ▐
- two                                                      ▐
⏱ 12.4k in / 1.1k out                                      ▐
⏱ 38s                                                      ▐
                                                           ▐
◆ lane-b                                                   ▐
the parser lane is rebased                                 ▐
⟳ context reset (/clear)                                   ▐
                                                           ▐
◁ Reply done                                               ▐
────────────────────────────────────────────────────────────
 ◆ waiting for input
❯  Type a message...
